--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>My first three.js app</title>
+    <title>Contagio</title>
     <style>
       body { margin: 0; }
     </style>
@@ -18,6 +18,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/noisejs@2.1.0/index.js"></script>
 	</head>
 	<body>
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
+
 </html>
