--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/noisejs@2.1.0/index.js"></script>
 	</head>
 	<body>
-		<script type="module" src="main.js"></script>
+		<script type="module" src="./scripts/main.js"></script>
 	</body>
-
 </html>
